[project]
name = "lab-3-analytics"
version = "1.0.0"
description = "Веб-приложение для анализа данных с помощью LLM-агента (FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "jinja2>=3.1.2,<3.1.5",
    "python-dotenv>=1.0.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "plotly>=5.15.0,<6.0.0",
    "lxml>=4.9.0,<6.0.0",
    "python-telegram-bot>=20.0,<22.0",
]

[project.scripts]
app = "app.main:run"
bot = "app.bot:run"
